Эксперементальная реализация событий для bar

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 	<my-customer data="data">             
             <xaxis> </xaxis>
             <yaxis> </yaxis>            
-            <bar></bar> 
-            <points class="test"> </points>
+            <bar ng-click="$parent.onClick()"></bar> 
+            <points> </points>
             <paths> </paths>            
         </my-customer>
     </div>
